# Idex

./: Cargo.toml  Makefile  README.md
default_config/: conf.toml
src/: click_data.rs  config.rs  confirmation.rs  dir_items.rs  entry.rs  events.rs  explorer.rs  input.rs  main.rs  sh.rs  state.rs  style.rs
